# how2managedb

./: .gitignore  LICENSE  README.md  atlas.hcl  compose.yaml  pyproject.toml  sqlc.yaml
db/migrations/: 20250201062849.sql  20250201063304.sql  20250201073721.sql  atlas.sum
db/query/: contact.sql  event.sql
db/schema/: functions.sql  tables.sql  views-materialized.sql
src/db/: contact.py  event.py  models.py
