[project]
name = "db-mgt-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.37",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.4",
]

[tool.ruff]
exclude = [".venv", "src/db"]
